refactor swagger
