# api-gateway/cmd/docs/swagger.json
@@ -1,12 +1,121 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Example of a simple HTTP server with Swagger documentation.",
-        "title": "Simple Go API",
+        "description": "SSO-service for DronWallet",
+        "title": "SSO-service API",
         "contact": {},
         "version": "1.0"
     },
     "host": "localhost:8080",
-    "basePath": "/api/v1",
-    "paths": {}
+    "basePath": "/api/v1/auth",
+    "paths": {
+        "/api/v1/auth/login": {
+            "post": {
+                "description": "Returns a JWT",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "login"
+                ],
+                "summary": "Login API",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.LoginOkResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "405": {
+                        "description": "Method Not Allowed"
+                    }
+                }
+            }
+        },
+        "/api/v1/auth/reg": {
+            "post": {
+                "description": "Returns a signed up user response",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "reg"
+                ],
+                "summary": "Register API",
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/main.RegisterOkResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "405": {
+                        "description": "Method Not Allowed"
+                    }
+                }
+            }
+        },
+        "/api/v1/auth/valid": {
+            "post": {
+                "description": "Check if JWT is still valid",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "valid"
+                ],
+                "summary": "JWT validation API",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.ValidOkResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "405": {
+                        "description": "Method Not Allowed"
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "main.LoginOkResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.RegisterOkResponse": {
+            "type": "object"
+        },
+        "main.ValidOkResponse": {
+            "type": "object",
+            "properties": {
+                "valid": {
+                    "type": "boolean"
+                }
+            }
+        }
+    }
 }
